Removed carousel placeholder images. Fixed page jumping around when image is switched issue

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
                         </button>
     
                         <!-- Image Display -->
-                        <img data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-30" data-aos-delay="900" data-aos-once="true" id="carousel-image" src="assets/img/Bauss.png" alt="ShiRen Lu" class="img-fluid" style="max-width: 60%; height: auto;">
+                        <div id="image-wrapper">
+                            <img data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-30" data-aos-delay="900" data-aos-once="true" id="carousel-image" src="assets/img/Bauss.png" alt="ShiRen Lu" class="img-fluid" style="max-width: 60%; height: auto;">
+                        </div>
     
                         <!-- Right Caret -->
                         <button class="carousel-arrow right-arrow" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="-30" data-aos-delay="1100" data-aos-once="true"  onclick="nextImage()">
