--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
                 </div>
             </div>
         </div>
+        <div class="chevron-wrapper">
+            <a class="links mt-sm-2 bottom-chevron" href="#hobbies" data-aos="fade-down" data-aos-duration="1000" data-aos-offset="-50" data-aos-delay="2000" data-aos-once="true">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-32 0 512 512" width="1em" height="1em" fill="currentColor">
+                    <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2023 Fonticons, Inc. -->
+                    <path d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"></path>
+                </svg>
+            </a>
+        </div>
     </section>
     
     <section id="hobbies" class="content-section">
