Implemented bookshelf to reading section of hobbies. Stopped hobbies section size from jumping around when changing hobbies. Refactored the carousel css and navbar css out of style.css.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="assets/css/codeblock.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/businesscard.css">
+    <link rel="stylesheet" href="assets/css/books.css">
+    <link rel="stylesheet" href="assets/css/carousel.css">
+    <link rel="stylesheet" href="assets/css/navbar.css">
     
 <script>
 	document.documentElement.setAttribute('anthonytedja-data-theme', localStorage.getItem('anthonytedja-data-theme') === 'light' ? 'light' : 'dark');
@@ -43,7 +46,8 @@
             <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" data-aos-once="true">
                 <h1 id="fullname" class="noselect">ShiRen Lu.</h1>
             </div>
-            <h2 id="postname" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" data-aos-once="true" class="text-end mt-3 noselect">Welcome to my corner of the internet :)</h2>
+            <h2 id="postname" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" data-aos-once="true" class="text-end mt-3 noselect">Welcome to my corner of the internet 😊 </h2>
+            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" data-aos-once="true" class="text-end mt-3 noselect">🚧🚧Active Construction Ongoing!🚧🚧</p>
                 <a class="links mt-sm-2 bottom-chevron" href="#about">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="-32 0 512 512" width="1em" height="1em" fill="currentColor" data-aos="fade-down" data-aos-duration="1000" data-aos-offset="-50" data-aos-delay="1300" data-aos-once="true">
                         <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2023 Fonticons, Inc. -->
@@ -102,7 +106,7 @@
         </div>
     </section>
     
-    <section id="hobbies" class="content-section">
+    <section id="hobbies" class="content-section" style="padding-top: 0px;">
         <div class="container">
             <!-- HOBBY TITLE AND SUBCAPTION -->
             <div class="caption v-middle text-center noselect">
@@ -129,12 +133,105 @@
                         not just about playing for me; it’s about the stories, the competition, and playing with my friends 😁.</p>
                 </div>
                 <div id="reading" class="hobby-content" style="display: none;">
-                    <h2>Reading</h2>
-                    <p style="font-size: 1.1rem; text-align: left;">Reading is a classic hobby, and I've been reading since I started learning how to read! Growing up with Harry Potter and
-                        Percy Jackson has made sure that reading really stuck with me till now. I'm a big fan of all genres but I especially love 
-                        sci-fi. Stories like Dune and Neuromancer being recent favorites. I also enjoy reading light novels like Lord of the Mysteries.
-                        Currently I'm reading <em>The Three-Body Problem</em>.
-                    </p>
+                    <div class="text-center mb-4">
+                        <h2>Reading</h2>
+                    </div>
+                    <div class="hobby-text mb-4">
+                        <p style="font-size: 1.2rem; margin-bottom: 0;">
+                            Reading is a classic hobby, and I've been reading since I started learning how to read! Growing up with Harry Potter and
+                            Percy Jackson has made sure that reading really stuck with me till now. I'm a big fan of all genres but I especially love 
+                            sci-fi. Stories like Dune and Neuromancer being recent favorites. I also enjoy reading light novels like Lord of the Mysteries.
+                            Currently I'm reading <em>The Three-Body Problem</em>.
+                        </p>
+                    </div>
+                    <div class="text-center">
+                        <div class="bookshelf">
+                            <div class="book-wrapper">
+                                <div class="book-items">
+                                  <div class="main-book-wrap">
+                                    <div class="book-cover">
+                                      <div class="book-inside"></div>
+                                      <div class="book-image">
+                                        <img src="assets/img/book/dunecover.jpg" />
+                                        <div class="effect"></div>
+                                        <div class="light"></div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="book-wrapper">
+                                <div class="book-items">
+                                  <div class="main-book-wrap">
+                                    <div class="book-cover">
+                                      <div class="book-inside"></div>
+                                      <div class="book-image">
+                                        <img src="assets/img/book/neuromancercover.png" />
+                                        <div class="effect"></div>
+                                        <div class="light"></div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="book-wrapper">
+                                <div class="book-items">
+                                  <div class="main-book-wrap">
+                                    <div class="book-cover">
+                                      <div class="book-inside"></div>
+                                      <div class="book-image">
+                                        <img src="assets/img/book/tbpcover.png" />
+                                        <div class="effect"></div>
+                                        <div class="light"></div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="book-wrapper">
+                                <div class="book-items">
+                                  <div class="main-book-wrap">
+                                    <div class="book-cover">
+                                      <div class="book-inside"></div>
+                                      <div class="book-image">
+                                        <img src="assets/img/book/lotmcover.png" />
+                                        <div class="effect"></div>
+                                        <div class="light"></div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="book-wrapper">
+                                <div class="book-items">
+                                  <div class="main-book-wrap">
+                                    <div class="book-cover">
+                                      <div class="book-inside"></div>
+                                      <div class="book-image">
+                                        <img src="assets/img/book/whatifcover.jpg" />
+                                        <div class="effect"></div>
+                                        <div class="light"></div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="book-wrapper">
+                                <div class="book-items">
+                                  <div class="main-book-wrap">
+                                    <div class="book-cover">
+                                      <div class="book-inside"></div>
+                                      <div class="book-image">
+                                        <img src="assets/img/book/atomiccover.jpg" />
+                                        <div class="effect"></div>
+                                        <div class="light"></div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div id="3d-modeling" class="hobby-content" style="display: none;">
                     <div class="text-center mb-4">
