feat: add image preloading to carousel and implement gameloop CSS for 3D effect. Also changed various images to webp

--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
     <link rel="stylesheet" href="assets/css/books.css">
     <link rel="stylesheet" href="assets/css/carousel.css">
     <link rel="stylesheet" href="assets/css/navbar.css">
-    
-<script>
-	document.documentElement.setAttribute('anthonytedja-data-theme', localStorage.getItem('anthonytedja-data-theme') === 'light' ? 'light' : 'dark');
-</script>
+    <link rel="stylesheet" href="assets/css/gameloop.css">
 </head>
 
 <body id="page-top" ontouchstart="">
@@ -67,12 +64,12 @@
                 <div class="col-lg-6 order-lg-1 p-0">
                     <div class="text-block">
                         <h2 class="displaymb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-30" data-aos-delay="700" data-aos-once="true">Me!</h2>
-                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-30" data-aos-delay="800" data-aos-once="true" style="font-size: 1.33rem;">Developed and expertly crafted by the University of Toronto's Computer Science Department, I'm the next-generation solution for tackling complex challenges with precision, creativity, and innovation.</p>
+                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-20" data-aos-delay="800" data-aos-once="true" style="font-size: 1.33rem;">Developed and expertly crafted by the University of Toronto's Computer Science Department, I'm the next-generation solution for tackling complex challenges with precision, creativity, and innovation.</p>
                         <h2 class="displaymb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-30" data-aos-delay="700" data-aos-once="true">2 Decades of Development.</h2>
-                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-30" data-aos-delay="850" data-aos-once="true">With 'research and development' beginning in 2004, I represent the culmination of 20 years of continuous improvement. Equipped with advanced learning capabilities and a constantly growing skillset.</p>
+                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-20" data-aos-delay="850" data-aos-once="true">With 'research and development' beginning in 2004, I represent the culmination of 20 years of continuous improvement. Equipped with advanced learning capabilities and a constantly growing skillset.</p>
                         <h2 class="displaymb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-30" data-aos-delay="700" data-aos-once="true">Multilingual</h2>
-                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-30" data-aos-delay="900" data-aos-once="true">You name it, I know it! From English to Chinese, from Python to C, and everything in between. But it doesn’t stop there, I'm fluent in frameworks and libraries too, like NumPy, PyTorch, Megatron, and more!*</p>
-                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-30" data-aos-delay="900" data-aos-once="true" style="font-size: 0.66rem;">*We cannot guarantee that ShiRen Lu actually knows <strong>every</strong> language 'in between'. However, he is capable of learning more.</p>
+                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-20" data-aos-delay="900" data-aos-once="true">You name it, I know it! From English to Chinese, from Python to C, and everything in between. But it doesn’t stop there, I'm fluent in frameworks and libraries too, like NumPy, PyTorch, Megatron, and more!*</p>
+                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-offset="-20" data-aos-delay="900" data-aos-once="true" style="font-size: 0.66rem;">*We cannot guarantee that ShiRen Lu actually knows <strong>every</strong> language 'in between'. However, he is capable of learning more.</p>
                     </div>
                 </div>
                 <!-- Image Content (Right) -->
@@ -124,13 +121,33 @@
             <!-- HOBBY DESCRIPTIONS -->
             <div class="hobbies-details text-center">
                 <div id="video-games" class="hobby-content" style="display: none;">
-                    <h2>Video Games</h2>
-                    <p style="font-size: 1.1rem; text-align: left;">Video games have always been a way for me to unwind, connect with friends, and dive into different worlds. 
-                        I’ve played everything from tactical shooters like CS2, Rainbow 6, and Apex Legends, to indie gems like 
-                        Hades, Enter the Gungeon, and Nine Sol. Risk of Rain 2 and Ultrakill? Absolute chaos in the best way. But 
-                        the game I always find myself coming back to is League of Legends—it’s frustrating, rewarding, and somehow 
-                        still keeps me hooked. While I’ve been gaming less recently, it’s still a huge part of who I am. Gaming’s 
-                        not just about playing for me; it’s about the stories, the competition, and playing with my friends 😁.</p>
+                    <div class= "text-center mb-4">
+                        <h2>Video Games</h2>
+                    </div>
+                    <div class="hobby-text mb-4">
+                        <p style="font-size: 1.1rem; text-align: left;">Video games have always been a way for me to unwind, connect with friends, and dive into different worlds. 
+                            I’ve played everything from tactical shooters like CS2, Rainbow 6, and Apex Legends, to indie gems like 
+                            Hades, Enter the Gungeon, and Nine Sol. Risk of Rain 2 and Ultrakill? Absolute chaos in the best way. But 
+                            the game I always find myself coming back to is League of Legends—it’s frustrating, rewarding, and somehow 
+                            still keeps me hooked. While I’ve been gaming less recently, it’s still a huge part of who I am. Gaming’s 
+                            not just about playing for me; it’s about the stories, the competition, and playing with my friends 😁.
+                        </p>
+                    </div>
+                    <div class="text-center">
+                        <div class="gameloop-container">
+                            <div id="gameloop">
+                                <figure><img src="assets/img/gameloop/apexlegends.webp" alt=""></figure>
+                                <figure><img src="assets/img/gameloop/cs2.webp" alt=""></figure>
+                                <figure><img src="assets/img/gameloop/cyberpunk.webp" alt=""></figure>
+                                <figure><img src="assets/img/gameloop/etg.webp" alt=""></figure>
+                                <figure><img src="assets/img/gameloop/hades.webp" alt=""></figure>
+                                <figure><img src="assets/img/gameloop/leagueoflegends.webp" alt=""></figure>
+                                <figure><img src="assets/img/gameloop/ninesol.webp" alt=""></figure>
+                                <figure><img src="assets/img/gameloop/riskofrain2.webp" alt=""></figure>
+                                <figure><img src="assets/img/gameloop/ultrakill.webp" alt=""></figure>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div id="reading" class="hobby-content" style="display: none;">
                     <div class="text-center mb-4">
@@ -152,7 +169,7 @@
                                     <div class="book-cover">
                                       <div class="book-inside"></div>
                                       <div class="book-image">
-                                        <img src="assets/img/book/dunecover.jpg" />
+                                        <img src="assets/img/book/dunecover.webp" />
                                         <div class="effect"></div>
                                         <div class="light"></div>
                                       </div>
@@ -166,7 +183,7 @@
                                     <div class="book-cover">
                                       <div class="book-inside"></div>
                                       <div class="book-image">
-                                        <img src="assets/img/book/neuromancercover.png" />
+                                        <img src="assets/img/book/neuromancercover.webp" />
                                         <div class="effect"></div>
                                         <div class="light"></div>
                                       </div>
@@ -180,7 +197,7 @@
                                     <div class="book-cover">
                                       <div class="book-inside"></div>
                                       <div class="book-image">
-                                        <img src="assets/img/book/tbpcover.png" />
+                                        <img src="assets/img/book/tbpcover (1).webp" />
                                         <div class="effect"></div>
                                         <div class="light"></div>
                                       </div>
@@ -194,7 +211,7 @@
                                     <div class="book-cover">
                                       <div class="book-inside"></div>
                                       <div class="book-image">
-                                        <img src="assets/img/book/lotmcover.png" />
+                                        <img src="assets/img/book/lotmcover.webp" />
                                         <div class="effect"></div>
                                         <div class="light"></div>
                                       </div>
@@ -208,7 +225,7 @@
                                     <div class="book-cover">
                                       <div class="book-inside"></div>
                                       <div class="book-image">
-                                        <img src="assets/img/book/whatifcover.jpg" />
+                                        <img src="assets/img/book/whatifcover.webp" />
                                         <div class="effect"></div>
                                         <div class="light"></div>
                                       </div>
@@ -222,7 +239,7 @@
                                     <div class="book-cover">
                                       <div class="book-inside"></div>
                                       <div class="book-image">
-                                        <img src="assets/img/book/atomiccover.jpg" />
+                                        <img src="assets/img/book/atomiccover.webp" />
                                         <div class="effect"></div>
                                         <div class="light"></div>
                                       </div>
